--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
         "allowJs": true
     },
     "include": [
-        "./src/**/*"
+        "src/**/*",
+        "typings/**/*"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
