--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "es6-module-and-typescript",
+  "name": "webpack-recipes",
   "version": "0.0.1",
   "description": "webpack basic setup",
   "main": "index.js",
@@ -17,8 +17,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
+    "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
