--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,16 @@
         "module": "es6",
         "moduleResolution": "node",
         "target": "es6",
-        "allowJs": true
+        "allowJs": true,
+        "baseUrl": "./", // This must be specified if "paths" is specified.
+        "paths": {
+            "@assets/*": [
+                "src/assets/*"
+            ],
+            "@components/*": [
+                "src/components/*"
+            ]
+        }
     },
     "include": [
         "src/**/*",
